# testmediacodec

./: .gitignore  .project  build.gradle  gradle.properties  installSystem.sh  settings.gradle  test.txt
app/: .project  build.gradle
app/src/androidTest/java/com/example/testcameramediacodec/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/htha/testcamsc600/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  aaaa.c  aaaa.h  native-lib.cpp
app/src/main/java/com/example/testcameramediacodec/: CameraData.java  CameraEncode.java  CameraObj.java  CameraThread.java  EncoderH264_thread.java  EncoderMain.java  EncoderStream.java  ImageHttp.java  ImageUtil.java  InternetCheck.java  InternetNetwork.java  MainActivity.java  Mp4RtmpMuxer.java  StorageUtils.java  VideoMuxer.java  VideoStream.java
app/src/main/java/com/htha/testcamsc600/: CameraData.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/testcameramediacodec/: ExampleUnitTest.java
app/src/test/java/com/htha/testcamsc600/: ExampleUnitTest.java
camera-sc600/: aaa.cpp  build.gradle
camera-sc600/src/androidTest/java/com/example/camera_sc600/: ExampleInstrumentedTest.java
camera-sc600/src/main/: AndroidManifest.xml
camera-sc600/src/main/java/com/example/cameraFeature/: CameraEncode.java  CameraThread.java  EncoderMain.java  EncoderStream.java  ImageHttp.java  ImageUtil.java  VideoMuxer.java  VideoStream.java
camera-sc600/src/main/java/com/example/camera_sc600/: CamInfo.java  CameraCsi.java  CameraSC600.java  SC600Params.java
camera-sc600/src/main/java/com/example/httpServer/: HttpServer.java  ImageData.java  LocationData.java  VideoInterval.java
camera-sc600/src/main/java/com/example/playback/: PlaybackStream.java  VideoMp4.java
camera-sc600/src/main/java/com/example/rtpH264/: AbstractPacketizer.java  H264Packetizer.java  RtpSocket.java  SenderReport.java
camera-sc600/src/main/java/com/htha/cameraFeature/: CameraEncode.java  CameraThread.java  EncoderMain.java  EncoderStream.java  FileConfig.java  ImageHttp.java  ImageUtil.java  RouterURL.java  ShareImage.java  VideoMuxer.java  VideoStream.java
camera-sc600/src/main/java/com/htha/camera_sc600/: CamInfo.java  CameraCsi.java  CameraSC600.java  ErrorHandler.java  SC600Params.java
camera-sc600/src/main/java/com/htha/device/: DeviceInfo.java
camera-sc600/src/main/java/com/htha/httpServer/: HttpServer.java  ImageData.java  LocationData.java  VideoInterval.java
camera-sc600/src/main/java/com/htha/playback/: PlaybackStream.java  VideoMp4.java
camera-sc600/src/main/java/com/htha/rtpH264/: AbstractPacketizer.java  H264Packetizer.java  RtpSocket.java  SenderReport.java
camera-sc600/src/test/java/com/example/camera_sc600/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
httpServer/src/androidTest/java/com/example/httpserver/: ExampleInstrumentedTest.java
httpServer/src/test/java/com/example/httpserver/: ExampleUnitTest.java
javaServer/: build.gradle
javaServer/src/androidTest/java/com/example/javaserver/: ExampleInstrumentedTest.java
javaServer/src/main/: AndroidManifest.xml
javaServer/src/main/java/com/example/javaserver/: Client.java  ClientAdapter.java  ClientCommand.java  ClientListener.java  Command.java  Logger.java  Server.java  ServerAdapter.java  ServerCommand.java  ServerListener.java
javaServer/src/test/java/com/example/javaserver/: ExampleUnitTest.java
mylibcommon/: CMakeLists.txt  build.gradle
mylibcommon/src/androidTest/java/com/example/mylibcommon/: ExampleInstrumentedTest.java
mylibcommon/src/androidTest/java/com/htha/mylibcommon/: ExampleInstrumentedTest.java
mylibcommon/src/main/: AndroidManifest.xml
mylibcommon/src/main/java/com/example/mylibcommon/: CommonFunction.java  NativeCamera.java  NativeFunction.java
mylibcommon/src/main/java/com/htha/mylibcommon/: CommonFunction.java  NativeCamera.java  NativeFunction.java
mylibcommon/src/main/jni/: CameraDevice.cpp  CameraDevice.h  font_12x24.h  myFunctionC.c  myFunctionC.h  myJniDefine.h  myNative.cpp  nativeCamera.cpp
mylibcommon/src/test/java/com/example/mylibcommon/: ExampleUnitTest.java
mylibcommon/src/test/java/com/htha/mylibcommon/: ExampleUnitTest.java
mylibrary2/src/androidTest/java/com/example/mylibrary2/: ExampleInstrumentedTest.java
mylibrary2/src/test/java/com/example/mylibrary2/: ExampleUnitTest.java
qcar_encoder/: build.gradle  qcar_encoder.aar
rtmp-client/: .project  CMakeLists.txt  build.gradle
rtmp-client/src/main/: AndroidManifest.xml
rtmp-client/src/main/cpp/: RtmpH264.cpp  RtmpH264.h  rtmpmuxer.c  rtmpmuxer.cpp
rtmp-client/src/main/cpp/flvmuxer/: xiecc_rtmp.c  xiecc_rtmp.h
rtmp-client/src/main/cpp/librtmp/: rtmp.h
test/: build.gradle
(+16 files in other folders)
